<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".view.activities.JoinActivity">

    <!-- ImageView del logo, ajustado para ser igual que el login -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="304dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/logo" />

    <!-- TextView de Bienvenida -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="¡Únete a la comunidad de TuOnce!"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- EditText del Usuario -->
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="295dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_rounded_background"
        android:ems="10"
        android:hint="Usuario"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#A9A9A9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <!-- EditText de la Contraseña -->
    <EditText
        android:id="@+id/etPasswordOne"
        android:layout_width="295dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_rounded_background"
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#A9A9A9"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- EditText para Repetir la Contraseña -->
    <EditText
        android:id="@+id/etPasswordTwo"
        android:layout_width="295dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_rounded_background"
        android:ems="10"
        android:hint="Repetir Contraseña"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#A9A9A9"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordOne"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botón de Registrarse -->
    <Button
        android:id="@+id/btJoin"
        android:layout_width="295dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_rounded_background"
        android:backgroundTint="#3E9B04"
        android:text="Registrarse"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordTwo" />

    <!-- Texto 'Vuelve al login' -->
    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Vuelve al login"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="italic"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btJoin"
        app:layout_constraintBottom_toTopOf="@id/tvSeleccionaEscudo" />

    <!-- Título "Selecciona escudo" -->
    <TextView
        android:id="@+id/tvSeleccionaEscudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Selecciona escudo"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/loginText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- HorizontalScrollView para los escudos -->
    <HorizontalScrollView
        android:id="@+id/hsvEscudos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvSeleccionaEscudo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/llEscudos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>
    </HorizontalScrollView>

    <!-- Título "Selecciona equipación" -->
    <TextView
        android:id="@+id/tvSeleccionaEquipacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Selecciona equipación"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/hsvEscudos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- HorizontalScrollView para las equipaciones -->
    <HorizontalScrollView
        android:id="@+id/hsvEquipaciones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvSeleccionaEquipacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <LinearLayout
        android:id="@+id/llEquipaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
