...
    <Button
        android:id="@+id/btJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#003E9B04"
        android:layout_marginBottom="150dp"
        android:text="Registrate"
        android:textAllCaps="false"
        android:textColor="#4CAF50"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/preguntaCuenta"
        app:layout_constraintStart_toStartOf="parent"
...
